--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "",
   "dependencies": {
     "cross-env": "^7.0.3",
+    "express": "^4.21.1",
     "jsdom": "^24.1.1",
     "koa": "^2.15.0"
   }
