--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "js-yaml": "^4.1.0",
     "jsdom": "^24.1.1",
+    "knex": "^3.1.0",
     "koa": "^2.15.0",
     "mysql2": "^3.12.0"
   }
