--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@prisma/client": "6.4.0",
     "cross-env": "^7.0.3",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "js-yaml": "^4.1.0",
     "jsdom": "^24.1.1",
     "knex": "^3.1.0",
     "koa": "^2.15.0",
     "mysql2": "^3.12.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "prisma": "6.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
