--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "module": "",
   "browser": "",
   "scripts": {
@@ -22,7 +22,8 @@
     "jsdom": "^24.1.1",
     "knex": "^3.1.0",
     "koa": "^2.15.0",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
