--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   "homepage": "",
   "dependencies": {
     "@prisma/client": "6.4.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "express": "^4.21.2",
+    "inversify": "^6.2.2",
+    "inversify-express-utils": "^6.4.10",
     "js-yaml": "^4.1.0",
     "jsdom": "^24.1.1",
     "knex": "^3.1.0",
     "koa": "^2.15.0",
     "mysql2": "^3.12.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
