--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "inversify-express-utils": "^6.4.10",
     "js-yaml": "^4.1.0",
     "jsdom": "^24.1.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "koa": "^2.15.0",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
