--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "knex": "^3.1.0",
     "koa": "^2.15.0",
     "mysql2": "^3.12.0",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
