--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
