--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@prisma/client": "6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.21.2",
+    "http-serve": "^1.0.1",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.4.10",
     "ioredis": "^5.5.0",
@@ -28,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "koa": "^2.15.0",
+    "multer": "1.4.5-lts.2",
     "mysql2": "^3.12.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.9",
