--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "request": "^2.88.2",
+    "shortid": "^2.2.17",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
