--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "http-serve": "^1.0.1",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.4.10",
