--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "reflect-metadata": "^0.2.2",
     "request": "^2.88.2",
     "shortid": "^2.2.17",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
