--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "request": "^2.88.2",
     "shortid": "^2.2.17",
