--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@fastify/mysql": "^5.0.2",
     "@prisma/client": "6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -22,6 +23,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fastify": "^5.3.3",
     "http-serve": "^1.0.1",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.4.10",
