--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@fastify/caching": "^9.0.3",
+    "@fastify/http-proxy": "^11.1.2",
     "@fastify/mysql": "^5.0.2",
+    "@fastify/rate-limit": "^10.3.0",
     "@prisma/client": "6.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -37,6 +40,7 @@
     "mysql2": "^3.12.0",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.9",
+    "opossum": "^8.5.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.4",
