--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "js-yaml": "^4.1.0",
     "jsdom": "^24.1.1",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "knex": "^3.1.0",
     "koa": "^2.15.0",
     "multer": "1.4.5-lts.2",
